crates/aranya-policy-compiler/tests/data/type_errors/publish_non_command_struct_invalid_type.fail.policy
struct Foo {}
action foo() {
    publish Foo {}
}
